<resources>
    <string name="app_name">Files</string>
    <string name="categories">Categories</string>
    <string name="storage">Storage</string>
    <string name="select_folder">Select Folder</string>
    <string name="paste_here">Paste Here</string>
    <string name="date_time">Date | Time</string>
    <string name="item_count_size">Item Count/Size</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="_0_selected">0 Selected</string>
    <string name="no_files">No files</string>
    <string name="rename">Rename</string>
    <string name="select">Select</string>
    <string name="copy_to">Copy to</string>
    <string name="move_to">Move to</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="recent_files">Recent files</string>
    <string name="images">Images</string>
</resources>