<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/noFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_files"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selectionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/breadcrumbsLayout">

        <TextView
            android:id="@+id/selectedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_selected"
            android:textSize="19sp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/breadcrumbsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/homeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:textSize="16sp"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/home"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@drawable/house_ic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/breadcrumbRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sortingLayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/breadcrumbsLayout"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/sortingType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/filter_ic"/>
            <TextView
                android:id="@+id/sortingTypeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSecondary"
                android:text="Name"/>

        </LinearLayout>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray500"
            android:layout_marginEnd="10dp"/>
        <ImageView
            android:id="@+id/sortingAccDesc"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/arrow_down_sort_ic"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/sortingLayout"
        app:layout_constraintBottom_toTopOf="@id/selectionBottomBar" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFolderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/selectionBottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <LinearLayout
        android:id="@+id/selectionBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/copyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:src="@drawable/copy_ic"
                android:paddingTop="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/copy"
                android:paddingBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/moveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:src="@drawable/cut_ic"
                android:paddingTop="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/move"
                android:paddingBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete"
                android:paddingTop="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/delete"
                android:paddingBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/renameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:src="@drawable/edit_ic"
                android:paddingTop="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/rename"
                android:paddingBottom="10dp"/>
        </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
