<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="File Manager"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_files"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:textColor="@color/gray500"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recent_recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginTop="8dp" />
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:textColor="@color/gray500"
                android:paddingEnd="10dp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/quick_access_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="8dp" />
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray500"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:textColor="@color/gray500"
                android:paddingTop="5dp"
                android:paddingEnd="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/storage_devices_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:orientation="vertical" />



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>